resolved Missing padding on atom properties view page (especially on mobile) #6

--- a/src/components/Atom/style.css
+++ b/src/components/Atom/style.css
@@ -104,6 +104,7 @@ td .atom-cell:hover,
     display: flex;
     flex-direction: column;
     text-align: left;
+    padding: 0 1em;
 }
 
 #atome-name {
